--- a/javascript/first-steps/FS.html
+++ b/javascript/first-steps/FS.html
@@ -99,6 +99,11 @@ alert(x); // виведе 5;
             <p1>2.<a href="Logical_operators.html"> Логічні оператори.</p1>
           </td>
         </tr>
+                        <tr>
+          <td> 
+            <p1>2.<a href="The_union_operator_with_null.html"> Оператор об’єднання з null '??'.</p1>
+          </td>
+        </tr>
       </table>
 
 
