--- a/javascript/first-steps/Logical_operators.html
+++ b/javascript/first-steps/Logical_operators.html
@@ -10,19 +10,294 @@
 <body>
   <button onclick="history.back()">ПОВЕРНУТИСЬ</button>
 <p>
-Існує чотири логічні оператори: || (АБО), && (І), ! (НЕ), ?? (оператор null-об’єднання).</br>  
+|| (АБО), && (І), ! (НЕ), ?? (оператор null-об’єднання).</br>  
 Хоча вони називаються “логічними”, вони можуть бути застосовані до значень будь-якого типу, не тільки булевих. Їх результати також можуть бути будь-якого типу.</br>
 </br>
 || (АБО)</br>
-Оператор “АБО” представлений двома символами вертикальної лінії:</br>
+Логічні комбінації:</br>
+( true || true );   // true</br>
+( false || true );  // true</br>
+( true || false );  // true</br>
+( false || false ); // false</br>
+</br>
+Перетворює операнди на булевий тип false або true.</br>
+Приклад використання:</br>
 Приклади----------------</br>
-result = a || b;</br>
+let hour = 12;</br>
+let isWeekend = true;</br>
+</br>
+if (hour < 10 || hour > 18 || isWeekend) {</br>
+  alert( 'Офіс зачинений.' ); // це вихідні</br>
+}</br>
 ------------------------</br>
 </br>
+Оператор АБО || робить наступне:</br>
+</br>
+&nbsp;1. Обчислює операнди зліва направо.</br>
+&nbsp;2. Перетворює значення кожного операнда на булеве. Якщо результат true, зупиняється і повертає початкове значення цього операнда.</br>
+&nbsp;3. Якщо всі операнди були обчисленні (тобто усі були false), повертає останній операнд.</br>
+&nbsp;4. Значення повертається у первісному вигляді без конвертації.</br>
+&nbsp;Іншими словами, ланцюжок з АБО || повертає перше правдиве значення або останнє, якщо правдивого значення не знайдено.</br>
+</br>
+Приклади----------------</br>
+alert( 1 || 0 ); // 1 (1 є правдивим)</br>
+</br>
+alert( null || 1 ); // 1 (1 є першим правдивим значенням)</br>
+alert( null || 0 || 1 ); // 1 (перше правдиве значення)</br>
+</br>
+alert( undefined || null || 0 ); // 0 (усі хибні, повертається останнє значення)</br>
+------------------------</br>
+</br>
+Це призводить до цікавого використання, у порівнянні з “чистим, класичним, виключно-булевим АБО”.</br>
+</br>
+1. Отримання першого істинного значення зі списку змінних або виразів.</br>
+</br>
+Наприклад, маємо змінні firstName, lastName та nickName, усі необов’язкові (тобто вони можуть бути невизначеними або мати хибні значення).</br>
+</br>
+Використаємо АБО ||, щоб вибрати ту змінну, яка має дані, і виведемо її (або рядок "Анонім", якщо жодна змінна не має даних):</br>
+Приклади----------------</br>
+let firstName = "";</br>
+let lastName = "";</br>
+let nickName = "СуперКодер";</br>
+</br>
+alert( firstName || lastName || nickName || "Анонім"); // СуперКодер</br>
+Якщо всі змінні мали б порожні рядки, тоді показалося слово "Анонім".</br>
+------------------------</br></br>
+Обчислення короткого замикання.</br>
+</br>
+Іншою особливістю оператора АБО || є так зване “обчислення короткого замикання”.</br>
+</br>
+Це означає, що оператор || опрацьовує аргументи доти, доки не досягається перше правдиве значення, після чого це значення негайно повертається, без подальшого опрацювання решти аргументів.</br>
+</br>
+Важливість такої особливості стає очевидною, якщо операнд є не просто змінною, а виразом із побічним ефектом, як-от присвоєння змінної або виклик функції.</br>
+</br>
+У наведеному нижче прикладі виведеться лише друге повідомлення:</br>
+Приклади----------------</br>
+true || alert("не виведеться");</br>
+false || alert("виведеться");</br>
+------------------------</br>
+В першому рядку оператор АБО || зупиняє виконання відразу після того, як “побачить” що лівий вираз є true, тож alert не виконається.</br>
+</br>
+Деколи таку конструкцію використовують, щоб виконувати команди лише при хибності умови ліворуч від оператора.</br>
+</br></br>
+&& (І)</br>
+Оператор І представлений двома амперсандами &&:</br>
+</br>
+result = a && b;</br>
+У класичному програмуванні І повертає true, якщо обидва оператори є правдивими, і false в іншому випадку:</br>
+</br>
+alert( true && true );   // true</br>
+alert( false && true );  // false</br>
+alert( true && false );  // false</br>
+alert( false && false ); // false</br>
+Приклад з if:</br>
+</br>
+let hour = 12;</br>
+let minute = 30;</br>
+</br>
+if (hour == 12 && minute == 30) {</br>
+  alert( 'Час: 12:30' );</br>
+}</br>
+Так само як з АБО, будь-яке значення дозволено як операнд І:</br>
+</br>
+if (1 && 0) { // обчислюється як true && false</br>
+  alert( "не буде працювати, тому що результат хибний" );</br>
+}</br>
+І “&&” шукає перше хибне значення</br>
+Дано декілька значень, об’єднаних кількома І:</br>
+</br>
+result = value1 && value2 && value3;</br>
+Оператор І && робить наступне:</br>
+</br>
+Обчислює операнди зліва направо.</br>
+Перетворює кожен операнд на булевий. Якщо результат false, зупиняється і повертає оригінальне значення того операнда.</br>
+Якщо всі операнди були обчисленні (тобто усі були правдиві), повертає останній операнд.</br>
+Іншими словами, І повертає перше хибне значення, або останнє значення, якщо жодного хибного не було знайдено.</br>
+</br>
+Правила, наведені вище, подібні до правил АБО. Різниця полягає в тому, що І повертає перше хибне значення, тоді як АБО повертає перше правдиве.</br>
+</br>
+Приклади:</br>
+</br>
+// якщо перший операнд правдивий,</br>
+// І повертає другий операнд:</br>
+alert( 1 && 0 ); // 0</br>
+alert( 1 && 5 ); // 5</br>
+</br>
+// якщо перший операнд хибний,</br>
+// І повертає саме його. Другий операнд ігнорується</br>
+alert( null && 5 ); // null</br>
+alert( 0 && "неважливо" ); // 0</br>
+Ми також можемо передавати декілька значень поспіль. Подивіться, як повертається перше хибне:</br>
+</br>
+alert( 1 && 2 && null && 3 ); // null</br>
+Коли всі значення є правдивими, повертається останнє значення:</br>
+</br>
+alert( 1 && 2 && 3 ); // 3, останнє</br>
+Пріоритет І && вище за АБО ||</br>
+Оператор І && має вищий пріоритет за АБО ||.</br>
+</br>
+Отже, код a && b || c && d по суті є таким самим, як код з виразами && у дужках: (a && b) || (c && d).</br>
+</br>
+Не міняйте if на || чи &&</br>
+Деколи оператор І && використовують як “скорочений варіант if”.</br>
+</br>
+Наприклад:</br>
+</br>
+let x = 1;</br>
+</br>
+(x > 0) && alert( 'Більше за нуль!' );</br>
+Дія у правій частині && буде виконуватися, тільки якщо обчислення дійде до неї. Тобто тільки якщо (x > 0) є істинним.</br>
+</br>
+Тому, власне, ми маємо аналог для:</br>
+</br>
+let x = 1;</br>
+</br>
+if (x > 0) alert( 'Більше за нуль!' );</br>
+Хоча варіант з && видається коротшим, конструкція з if є більш очевидною і зазвичай більш читабельною. Тому ми рекомендуємо використовувати кожну конструкцію за своїм призначенням: використовуємо if, якщо нам потрібна інструкція if, і використовуємо &&, якщо нам потрібен оператор І.</br>
+</br>
+! (НЕ)</br>
+Булевий оператор НЕ представлений знаком оклику !.</br>
+</br>
+Синтаксис дуже простий:</br>
+</br>
+result = !value;</br>
+Оператор приймає один аргумент і виконує наступне:</br>
+</br>
+Перетворює операнд на булевий тип: true/false.</br>
+Повертає зворотне значення.</br>
+Наприклад:</br>
+</br>
+alert( !true ); // false</br>
+alert( !0 ); // true</br>
+Подвійний НЕ !! іноді використовується для перетворення значення на булевий тип:</br>
+</br>
+alert( !!"не пустий рядок" ); // true</br>
+alert( !!null ); // false</br>
+Тобто, перший НЕ перетворює значення на булеве і повертає зворотне, а другий НЕ інвертує його знову. Зрештою ми маємо просте перетворення значень на булевий тип.</br>
+</br>
+Є трохи довший спосіб зробити те ж саме – вбудована функція Boolean:</br>
+</br>
+alert( Boolean("не пустий рядок") ); // true</br>
+alert( Boolean(null) ); // false</br>
+Пріоритет НЕ ! є найвищим серед усіх логічних операторів, тому він завжди виконується першим, перед && або ||.</br>
+</br>
+Приклади----------------</br>
+alert( null || 2 || undefined ); //виведе 2</br></br> 
+alert( alert(1) || 2 || alert(3) ); // виведе спочатку 1, потім 2. Виклик alert не повертає значення. Або, іншими словами, повертає undefined. Перший АБО || обчислює свій лівий операнд alert(1). Це показує перше повідомлення з 1. alert повертає undefined, тому АБО переходить до другого операнда, шукаючи правдиве значення. Другий операнд 2 є правдивим, тому виконання зупинено, повернуто 2 і потім показано зовнішнім alert. 3 не буде виведене, тому що обчислення не досягає alert(3).</br>
+alert( 1 && null && 2 ); // виведе null, тому що це перше хибне значення зі списку.</br>
+alert( alert(1) && alert(2) ); //виведе 1, а потім undefined. Виклик alert повертає undefined (він просто показує повідомлення, тому не повертається значення, яке б мало сенс). Через це && обчислює лівий операнд (виводить 1) і негайно зупиняється, оскільки undefined є хибним значенням. А && шукає хибне значення і повертає його, як це і зроблено.</br>
 
 
+Результат АБО І АБО
+важливість: 5
+Який буде результат?
+
+alert( null || 2 && 3 || 4 );
+рішення
+Відповідь: 3.
+
+alert( null || 2 && 3 || 4 );
+Пріоритет І && вище за ||, тому він виконується першим.
+
+Результат 2 && 3 = 3, тому вираз стає:
+
+null || 3 || 4
+Тепер результат — перше правдиве значення: 3.
 
 
+Перевірте діапазон
+важливість: 3
+Напишіть умову if, щоб перевірити, чи age знаходиться між 14 та 90 включно.
+
+“Включно” означає, що age може досягати країв 14 або 90.
+
+рішення
+if (age >= 14 && age <= 90)
+
+Перевірте значення поза діапазоном
+важливість: 3
+Напишіть умову if, щоб перевірити, чи значення age НЕ знаходиться між 14 та 90 включно.
+
+Створіть два варіанти: перший з оператором НЕ !, другий — без нього.
+
+рішення
+Перший варіант:
+
+if (!(age >= 14 && age <= 90))
+Другий варіант:
+
+if (age < 14 || age > 90)
+
+Питання про "if"
+важливість: 5
+Які з цих alert буде виконано?
+
+Якими будуть результати виразів у if(...)?
+
+if (-1 || 0) alert( 'перший' );
+if (-1 && 0) alert( 'другий' );
+if (null || -1 && 1) alert( 'третій' );
+рішення
+Відповідь: перший і третій виконаються.
+
+Деталі:
+
+// Виконається.
+// Результат -1 || 0 = -1, правдивий
+if (-1 || 0) alert( 'перший' );
+
+// Не виконається
+// -1 && 0 = 0, хибний
+if (-1 && 0) alert( 'другий' );
+
+// Виконається
+// Оператор && має більший пріоритет, ніж ||
+// тому -1 && 1 виконається першим, даючи нам послідовність:
+// null || -1 && 1  ->  null || 1  ->  1
+if (null || -1 && 1) alert( 'третій' );
+
+Перевірте логін
+важливість: 3
+Напишіть код, який запитує логін за допомогою prompt.
+
+Якщо відвідувач вводить "Admin", тоді запропонуйте за допомогою prompt ввести пароль. Якщо введено порожній рядок або натиснуто Esc – показати “Скасовано”. Якщо введено інший рядок – тоді покажіть “Я вас не знаю”.
+
+Пароль перевіряється наступним чином:
+
+Якщо він дорівнює “Господар”, тоді покажіть “Ласкаво просимо!”,
+Інший рядок – покажіть “Неправильний пароль”,
+Для порожнього рядка, або якщо введення було скасовано, покажіть “Скасовано”.
+Схема:
+
+
+Будь ласка, використовуйте вкладені if блоки. Потурбуйтесь про загальну читабельність коду.
+
+Підказка: передача порожнього вводу до запиту повертає порожній рядок ''. Натискання ESC протягом запиту повертає null.
+
+Запустити демонстрацію
+
+рішення
+let userName = prompt('Хто там?', '');
+
+if (userName === 'Admin') {
+
+  let pass = prompt('Пароль?', '');
+
+  if (pass === 'Господар') {
+    alert( 'Ласкаво просимо!' );
+  } else if (pass === '' || pass === null) {
+    alert( 'Скасовано' );
+  } else {
+    alert( 'Неправильний пароль' );
+  }
+
+} else if (userName === '' || userName === null) {
+  alert( 'Скасовано' );
+} else {
+  alert( 'Я вас не знаю' );
+}
+Зверніть увагу на вертикальні відступи у блоках if. Вони технічно не потрібні, але роблять код читабельним.
+------------------------</br>
 </p>
 </br> &nbsp; &nbsp; &nbsp;</br>
 
